# eigen-system

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: inverse.rs  lib.rs  power.rs  qr.rs  shift.rs  tridiag.rs
